[gd_scene load_steps=3 format=3 uid="uid://dqw8x1y5m3n0p"]

[ext_resource type="Script" path="res://scripts/LobbyManager.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cb1jqlycdvlpc" path="res://assets/backgrounds/cave_background.png" id="2_cave_bg"]

[node name="LobbyManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_cave_bg")
stretch_mode = 1
modulate = Color(0.6, 0.6, 0.7, 1)

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.4)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MULTIPLAYER LOBBY"
horizontal_alignment = 1
vertical_alignment = 1
modulate = Color(1, 1, 0.8, 1)

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HostJoinContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="VBoxContainer/HostJoinContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host Lobby"

[node name="JoinButton" type="Button" parent="VBoxContainer/HostJoinContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join Lobby"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="JoinCodeContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="JoinCodeLabel" type="Label" parent="VBoxContainer/JoinCodeContainer"]
layout_mode = 2
text = "Enter Lobby Code:"
horizontal_alignment = 1

[node name="JoinCodeInput" type="LineEdit" parent="VBoxContainer/JoinCodeContainer"]
layout_mode = 2
placeholder_text = "Enter 6-digit code"
max_length = 6

[node name="JoinCodeButtonContainer" type="HBoxContainer" parent="VBoxContainer/JoinCodeContainer"]
layout_mode = 2

[node name="JoinCodeButton" type="Button" parent="VBoxContainer/JoinCodeContainer/JoinCodeButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join with Code"

[node name="ChangeModeButton" type="Button" parent="VBoxContainer/JoinCodeContainer/JoinCodeButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back to Host/Join"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LobbyInfoContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LobbyCodeLabel" type="Label" parent="VBoxContainer/LobbyInfoContainer"]
layout_mode = 2
text = "Lobby Code: "
horizontal_alignment = 1

[node name="PlayersLabel" type="Label" parent="VBoxContainer/LobbyInfoContainer"]
layout_mode = 2
text = "Players: 0/4"
horizontal_alignment = 1

[node name="PlayersList" type="VBoxContainer" parent="VBoxContainer/LobbyInfoContainer"]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start Game"
disabled = true

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1
